--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,81 @@
+/* GENERAL ------------------------------------------------------------------------- */
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  font-family: Arial, Tahoma, sans-serif;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.pageContainer {
+  height: 100vh;
+  display: flex;
+  /* flex-direction: column; */
+  align-items: center;
+  justify-content: center;
+  gap: 50px;
+}
+
+.rightColumn {
+  height: 460px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  justify-content: space-between;
+}
+
+/* GRID ------------------------------------------------------------------------- */
+.gridContainer {
+  /* border: 2px solid black; */
+  height: 460px;
+  width: 460px;
+  display: grid;
+  grid-template-columns: repeat(4, 120px);
+  grid-template-rows: repeat(4, 120px);
+}
+
+.gridSquare {
+  border: 2px solid red;
+  border-radius: 15%;
+  height: 100px;
+  width: 100px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: linear-gradient(#fad35d, #f66e1c);
+  color: white;
+  font-size: 42px;
+  text-shadow: -4px 0 6px rgba(0, 0, 0, 0.566);
+}
+
+/* CLEAR BUTTON ------------------------------------------------------------------- */
+.clearContainer {
+  color: #d8d8d8;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 20px;
+}
+
+.clearContainer button {
+  padding: 7px 14px;
+  font-size: 30px;
+  border-radius: 50%;
+  border: none;
+  color: white;
+  background: #d8d8d8;
+}
+
+/* OUTPUT ------------------------------------------------------------------------- */
+.outputContainer {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  width: 300px;
+  height: 80px;
+  border: 1px solid black;
+}
+
+.textOutput {
+  font-size: 40px;
+  padding: 20px;
+  /* padding-left: 30px; */
+  color: #d1001b;
 }
