--- a/src/index.css
+++ b/src/index.css
@@ -1,24 +1,38 @@
+/* FONT ------------------------------------------------------------------------- */
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;800&display=swap");
 /* GENERAL ------------------------------------------------------------------------- */
 body {
   margin: 0;
-  font-family: Arial, Tahoma, sans-serif;
+  font-family: "Montserrat", sans-serif;
+}
+
+.contentWrapper {
+  height: 100vh;
+  width: 100vw;
+  display: flex;
+  justify-content: center;
+}
+
+.item1 {
+  grid-area: gridContainer;
+}
+
+.item2 {
+  grid-area: clearButton;
+}
+
+.item3 {
+  grid-area: textOutput;
 }
 
 .pageContainer {
-  height: 100vh;
-  display: flex;
-  /* flex-direction: column; */
-  align-items: center;
-  justify-content: center;
-  gap: 50px;
-}
-
-.rightColumn {
-  height: 460px;
-  display: flex;
-  flex-direction: column;
-  align-items: flex-end;
-  justify-content: space-between;
+  display: grid;
+  grid-template-columns: 100%;
+  grid-template-rows: 25% 50% 25%;
+  grid-template-areas:
+    "clearButton"
+    "gridContainer"
+    "textOutput";
 }
 
 /* GRID ------------------------------------------------------------------------- */
@@ -29,11 +43,10 @@ body {
   display: grid;
   grid-template-columns: repeat(4, 120px);
   grid-template-rows: repeat(4, 120px);
+  font-weight: 800;
 }
 
 .gridSquare {
-  border: 3px solid #f6615f;
-  /* border: 3px solid #a71926; */
   border-radius: 10px;
   height: 100px;
   width: 100px;
@@ -44,6 +57,22 @@ body {
   color: white;
   font-size: 42px;
   text-shadow: -3px -1px 6px rgba(0, 0, 0, 0.566);
+  position: relative;
+  z-index: 0;
+}
+
+.gridSquare:before {
+  content: "";
+  position: absolute;
+  z-index: -1;
+  inset: 0;
+  padding: 3px;
+  border-radius: 10px;
+  background: linear-gradient(#f5515e, #a00a1e);
+  -webkit-mask: linear-gradient(#fff 0 0) content-box, linear-gradient(#fff 0 0);
+  mask: linear-gradient(#fff 0 0) content-box, linear-gradient(#fff 0 0);
+  -webkit-mask-composite: xor;
+  mask-composite: exclude;
 }
 
 .gridSquare.selected {
@@ -55,6 +84,10 @@ body {
   background: linear-gradient(#b0e84f, #459521);
 }
 
+.gridSquare.selected:before {
+  padding: 0px;
+}
+
 .gridSquare.selected.invalid {
   background: linear-gradient(#ee4a59, #a0071d);
 }
@@ -63,8 +96,8 @@ body {
 .clearContainer {
   color: #d8d8d8;
   display: flex;
+  justify-content: flex-end;
   align-items: center;
-  justify-content: center;
   gap: 20px;
 }
 
@@ -88,21 +121,24 @@ body {
 /* OUTPUT ------------------------------------------------------------------------- */
 .outputContainer {
   display: flex;
-  justify-content: flex-start;
+  justify-content: center;
   align-items: center;
 }
+
 .outputContainer form {
-  width: 400px;
-  height: 80px;
+  width: 460px;
   border: 3px solid #a4a4a4;
+  padding: 10px 0px 10px 20px;
 }
 
 .outputContainer input {
-  width: 300px;
-  /* height: 80px; */
+  font-family: "Montserrat", sans-serif;
+  font-weight: 800;
+
+  width: 360px;
+  height: 80px;
   border: none;
   font-size: 40px;
-  padding: 10px 20px;
   /* padding-left: 30px; */
   color: #d1001b;
   letter-spacing: 7px;
@@ -125,7 +161,7 @@ input.invalid {
 }
 
 span {
-  font-size: 18px;
+  font-size: 26px;
 }
 
 span.valid {
@@ -134,4 +170,38 @@ span.valid {
 
 span.invalid {
   color: #f4c8cd;
+}
+
+/* MEDIA QUERIES ------------------------------------------------------------------*/
+@media only screen and (min-width: 800px) {
+  .contentWrapper {
+    height: 100vh;
+    width: 100vw;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .pageContainer {
+    display: grid;
+    grid-template-columns: 50% 50%;
+    grid-template-rows: 50% 50%;
+    grid-template-areas:
+      "gridContainer clearButton"
+      "gridContainer textOutput";
+  }
+
+  .gridContainer {
+    margin-right: 50px;
+  }
+
+  .clearContainer {
+    height: 100%;
+    align-items: flex-start;
+  }
+
+  .outputContainer {
+    height: 100%;
+    align-items: flex-end;
+  }
 }
