--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,7 @@ body {
 }
 
 button {
-  font-size: 30px;
+  font-size: 20px;
   border-radius: 100%;
   border: none;
   color: white;
@@ -18,7 +18,9 @@ button {
   height: 100vh;
   width: 100vw;
   display: flex;
+  flex-direction: column;
   justify-content: center;
+  /* align-items: center; */
 }
 
 .item1 {
@@ -44,18 +46,19 @@ button {
 /* GRID ------------------------------------------------------------------------- */
 .gridContainer {
   /* border: 2px solid black; */
-  height: 460px;
-  width: 460px;
+  height: 320px;
+  width: 320px;
   display: grid;
-  grid-template-columns: repeat(4, 120px);
-  grid-template-rows: repeat(4, 120px);
+  grid-template-columns: repeat(4, 80px);
+  grid-template-rows: repeat(4, 80px);
   font-weight: 800;
+  margin: 30px;
 }
 
 .gridSquare {
   border-radius: 10px;
-  height: 100px;
-  width: 100px;
+  height: 70px;
+  width: 70px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -110,7 +113,8 @@ button {
   align-items: flex-end;
   justify-content: flex-start;
   gap: 5px;
-  padding-top: 25px;
+  padding: 20px;
+  margin-bottom: 20px;
 }
 
 /* CLEAR BUTTON ------------------------------------------------------------------- */
@@ -148,48 +152,36 @@ button {
 /* OUTPUT ------------------------------------------------------------------------- */
 .outputContainer {
   display: flex;
-  justify-content: center;
-  align-items: flex-start;
-  margin-top: 50px;
-}
-
-.outputContainer form {
-  width: 460px;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: 70px;
+  margin-left: 30px;
   border: 3px solid #a4a4a4;
-  padding: 10px 0px 10px 20px;
+  width: 75vw;
+  height: 80px;
+  padding: 0 15px;
 }
 
-.outputContainer input {
+.outputContainer p {
   font-family: "Montserrat", sans-serif;
   font-weight: 800;
-
-  width: 360px;
-  height: 80px;
   border: none;
-  font-size: 40px;
-  /* padding-left: 30px; */
+  font-size: 30px;
   color: #d1001b;
   letter-spacing: 7px;
+  margin-right: 0;
 }
 
-.outputContainer input:selected {
-  border: none;
-}
-
-.outputContainer input:focus {
-  outline: none;
-}
-
-input.valid {
+p.valid {
   color: #7ed320;
 }
 
-input.invalid {
+p.invalid {
   color: #d1001b;
 }
 
 span {
-  font-size: 26px;
+  font-size: 20px;
 }
 
 span.valid {
@@ -201,11 +193,13 @@ span.invalid {
 }
 
 /* MEDIA QUERIES ------------------------------------------------------------------*/
+/* For screens larger than mobile */
 @media only screen and (min-width: 800px) {
   .contentWrapper {
     height: 100vh;
     width: 100vw;
     display: flex;
+    flex-direction: row;
     align-items: center;
     justify-content: center;
   }
@@ -220,7 +214,21 @@ span.invalid {
   }
 
   .gridContainer {
+    margin: 0;
     margin-right: 50px;
+    height: 460px;
+    width: 460px;
+    grid-template-columns: repeat(4, 120px);
+    grid-template-rows: repeat(4, 120px);
+  }
+
+  .gridSquare {
+    height: 100px;
+    width: 100px;
+  }
+
+  .buttonsDiv {
+    padding-top: 25px;
   }
 
   .clearContainer {
@@ -228,8 +236,26 @@ span.invalid {
   }
 
   .outputContainer {
-    height: 100%;
-    align-items: flex-end;
+    height: 80px;
+    align-items: center;
     margin-top: 0;
+    margin-left: 0;
+    width: 80%;
+    margin-top: 140px;
+    margin-left: 30px;
+  }
+
+  .outputContainer p {
+    font-weight: 800;
+    width: 360px;
+    font-size: 40px;
+  }
+
+  span {
+    font-size: 26px;
+  }
+
+  button {
+    font-size: 30px;
   }
 }
